--- a/ArticleAppBlazorServer/Pages/Articles/Edit.razor
+++ b/ArticleAppBlazorServer/Pages/Articles/Edit.razor
@@ -1,7 +1,61 @@
-﻿@page "/Articles/Edit"
+﻿@page "/Articles/Edit/{Id:int}" 
+
+@inject IArticleRepository ArticleRepository;
+@inject NavigationManager NavigationManager;
+@inject ILogger<Edit> Logger;
 
 <h3>Edit</h3>
+<div class="row">
+    <div class="col-md-12">
+        <EditForm Model="Model" method="post" FormName="editForm" OnValidSubmit="btnEdit_Click">
+            <DataAnnotationsValidator></DataAnnotationsValidator>
+            <ValidationSummary class="text-danger" role="alert"></ValidationSummary>
+            <div class="form-group row">
+                <label for="id" class="col-sm-2 col-form-label">ID: </label>
+                <div class="col-sm-10">
+                    @Model.Id
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="txtTitle">Title</label>
+                <InputText id="txtTitle" class="form-control" @bind-Value="Model.Title"
+                           placeholder="Enter Title"  />
+                <ValidationMessage For="() => Model.Title" class="text-danger"></ValidationMessage>
+            </div>
+            <div class="form-group">
+                <label for="txtContent">Content</label>
+                <InputTextArea id="txtContent" class="form-control" @bind-Value="Model.Content"
+                           placeholder="Enter Content" />
+                <ValidationMessage For="() => Model.Content" class="text-danger"></ValidationMessage>
+            </div>
+            <div class="form-group mt-1">
+                <button type="submit" class="btn btn-primary" id="editFormSubmit">Edit</button>
+                <a href="/Articles" class="btn btn-secondary">List</a>
+            </div>
+        </EditForm>
+    </div>
+</div>
 
 @code {
+    [Parameter]
+    public int Id { get; set; }
 
+    public Article Model { get; set; } = new Article();
+
+    protected override async Task OnInitializedAsync()
+    {
+        Logger.LogInformation($"※※※[!] url : {NavigationManager.Uri} ");
+        Model = await ArticleRepository.GetArticleByIdAsync(Id);
+    }
+
+    protected async Task btnEdit_Click()
+    {
+        Logger.LogInformation("※※※[1]Edit Submit");
+        //Logger.LogInformation($"※※※[2]Model.Id={Model.Id} Model.title={Model.Title}");
+        Logger.LogInformation("=>Model: {@Model}", Model);
+
+        await ArticleRepository.EditArticleAsync(Model);
+        //상세 페이지로 이동
+        NavigationManager.NavigateTo($"/Articles/Details/{Id}");
+    }
 }
