--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -20,13 +20,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/Articles/">
+                <span class="oi oi-pencil" aria-hidden="true"></span> * 게시판
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Articles">
-                <span class="oi oi-pencil" aria-hidden="true"></span> *게시판
+            <NavLink class="nav-link" href="fetchdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
     </nav>
