--- a/ArticleAppBlazorServer/Pages/Articles/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Articles/Index.razor
@@ -1,7 +1,12 @@
 ﻿@page "/Articles"
 @page "/Articles/Index"
 
+@using Dul.Web
+@using Dul.Domain.Common
+@using ArticleAppBlazorServer.Pages.Articles.Components;
+
 @inject IArticleRepository ArticleRepository;
+
 
 <h3>Index</h3>
 
@@ -61,7 +66,8 @@
         }
     </div>
     <div class="col-md-12">
-        <DulPagerComponent Model="pager" PageIndexChanged="PageIndexChanged"></DulPagerComponent>
+        @* <DulPagerComponent Model="pager" PageIndexChanged="PageIndexChanged"></DulPagerComponent> *@
+        <ArticlePager Model="pager" PageIndexChangedComponent="PageIndexChangedIndex"></ArticlePager>
     </div>
 </div>
 @code {
@@ -69,6 +75,15 @@
     private ILogger<Create> Logger { get; set; }
 
     private List<Article> articles;
+
+    // 페이저 객체 생성
+    private PagerBase pager = new PagerBase()
+    {
+        PageNumber = 1,
+        PageIndex = 0,
+        PageSize = 3,
+        PagerButtonCount = 5
+    };
 
     /// <summary>
     /// 페이지 로드  
@@ -78,6 +93,27 @@
     {
         Logger.LogInformation("※※※ [1]Index 시작");
 
-        articles = await ArticleRepository.GetArticlesAsync();
+        //[1] 전체 데이터 출력
+        //articles = await ArticleRepository.GetArticlesAsync();
+
+        //[2] 페이징 처리
+        PagingResult<Article> pagingData = await ArticleRepository.GetAllAsync(pager.PageIndex, pager.PageSize);
+        pager.RecordCount = pagingData.TotalRecords; // 전체 레코드 수
+        Logger.LogInformation($"※※※ [2] 전체 레코드 수 {pager.RecordCount} , {pager.PageNumber}페이지");
+        articles = pagingData.Records.ToList(); // 현재 페이지의 레코드
+    }
+
+    //pager버튼 클릭 콜백 함수
+    private async void PageIndexChangedIndex(int pageIndex)
+    {
+        Logger.LogInformation($"※※※ [3] PageIndexChanged 호출 pageIndex={pageIndex}");
+        pager.PageIndex = pageIndex;
+        pager.PageNumber = pageIndex + 1;
+
+        PagingResult<Article> pagingData = await ArticleRepository.GetAllAsync(pager.PageIndex, pager.PageSize);
+        pager.RecordCount = pagingData.TotalRecords; // 전체 레코드 수
+        articles = pagingData.Records.ToList(); // 현재 페이지의 레코드
+
+        StateHasChanged(); //현재 페이지를 다시 그림
     }
 }
