--- a/ArticleAppBlazorServer/Pages/Articles/Components/ArticleDeleteDialog.razor
+++ b/ArticleAppBlazorServer/Pages/Articles/Components/ArticleDeleteDialog.razor
@@ -1,5 +1,25 @@
-﻿<h3>ArticleDeleteDialog</h3>
+﻿<div class="modal" tabindex="-1" role="dialog" id="articleDeleteDialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">공지글로 올리기</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>글을 정말로 삭제 하시겠습니까?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" @onclick="OnClickParam">Yes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
-
+    [Parameter]
+    
+    public EventCallback<MouseEventArgs> OnClickParam { get; set; }
 }
