게시판 UI 개선, 상세보기 내용 줄바꿈 추가

--- a/ArticleAppBlazorServer/Pages/Articles/Details.razor
+++ b/ArticleAppBlazorServer/Pages/Articles/Details.razor
@@ -50,6 +50,6 @@
 
         Model = await ArticleRepository.GetArticleByIdAsync(Id);
 
-        content = Dul.HtmlUtility.EncodeWithTabAndSpace(Model.Content);           // \n, \t, 공백 문자를 HTML 태그로 변환
+        content = Dul.HtmlUtility.EncodeWithTabAndSpace(Model?.Content);           // \n, \t, 공백 문자를 HTML 태그로 변환
     }
 }
