--- a/ArticleAppBlazorServer/Pages/Articles/Edit.razor
+++ b/ArticleAppBlazorServer/Pages/Articles/Edit.razor
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <label for="txtContent">Content</label>
                 <InputTextArea id="txtContent" class="form-control" @bind-Value="Model.Content"
-                           placeholder="Enter Content" />
+                               placeholder="Enter Content" rows="5" />
                 <ValidationMessage For="() => Model.Content" class="text-danger"></ValidationMessage>
             </div>
             <div class="form-group mt-1">
