--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -25,6 +25,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Notices/">
+                <span class="oi oi-audio" aria-hidden="true"></span> * 공지사항
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Amaranth10/">
+                <span class="oi oi-audio" aria-hidden="true"></span> * Amaranth10
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
