--- a/ArticleAppBlazorServer/Pages/Notices/Manage.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Manage.razor
@@ -2,6 +2,102 @@
 
 <h3>Manage</h3>
 
-@code {
 
-}
+<div class="row">
+    <div class="col-md-12 m-1">
+        <a href="/Notices/Create" class="btn btn-primary">Create(InLine)</a>
+        <AuthorizeView>
+            <Authorized>
+            </Authorized>
+            <NotAuthorized>
+                <a href="/Notices/Index" class="btn btn-primary">List</a>
+                <input type="button" name="btnCreate" value="Create(Modal)" class="btn btn-primary"
+                      @onclick="ShowEditorForm" />
+                <a href="/Notices/Report" class="btn btn-primary">Report</a>
+            </NotAuthorized>
+        </AuthorizeView>
+        <AuthorizeView Roles="Administrators, Managers">
+            <a href="/Notices/Index" class="btn btn-primary">List</a>
+        </AuthorizeView>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        @if (models == null)
+        {
+            @* <p><em>Loading...</em></p> *@
+            <div class="m-2">
+                <p>
+                    <MatProgressBar Indeterminate="true"></MatProgressBar>
+                </p>
+            </div>
+        }
+        else
+        {
+            <table class="table table-bordered table-hover">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Created</th>
+                        <th>Action</th>
+                        <th>Admin</th>
+                    </tr>
+                </thead>
+                @if (models.Count == 0)
+                {
+                    <tbody>
+                        <tr>
+                            <td colspan="4" class="text-center">
+                                <p>데이터가 없습니다.</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                }
+                else
+                {
+                    <tbody>
+                        @foreach (var m in models)
+                        {
+                            <tr>
+                                <td>@m.Id</td>
+                                <td @onclick="@(()=>NameClick(m.Id))">
+                                    <a href="/Notices/Details/@m.Id">
+                                        @m.Name
+                                    </a>
+                                </td>
+                                <td>@m.Created?.ToShortTimeString()</td>
+                                <td>
+                                    <a href="/Notices/Details/@m.Id" class="btn btn-light">Details</a>
+                                    <a href="/Notices/Edit/@m.Id" class="btn btn-light">Edit</a>
+                                    <a href="/Notices/Delete/@m.Id" class="btn btn-light">Delete</a>
+                                </td>
+                                <td>
+                                    <input type="button" name="btnEdit" value="Edit(Modal)" class="btn btn-primary"
+                                           @onclick="(()=>EditBy(m))" />
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+
+                }
+            </table>
+        }
+    </div>
+    <div class="col-md-12">
+        @*<BmsPagerComponent Model="pager" PageIndexChanged="PageIndexChangedIndex"></BmsPagerComponent>*@
+        <BmsPager.BmsPagerComponent Model="pager" PageIndexChanged="PageIndexChangedA"></BmsPager.BmsPagerComponent>
+    </div>
+    <div class="col-md-12">
+    </div>
+</div>
+
+<ArticleAppBlazorServer.Pages.Notices.Components.EditorForm Model="model" @ref="EditFormReference"
+    CreateCallback="CreatOrEdit"
+    EditCallback="CreatOrEdit"
+>
+    <EditorFormTitle>@EditorFormTitle</EditorFormTitle>
+</ArticleAppBlazorServer.Pages.Notices.Components.EditorForm>
+
+
