--- a/ArticleAppBlazorServer/Pages/Notices/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Index.razor
@@ -39,6 +39,7 @@
                         <th>Id</th>
                         <th>Name</th>
                         <th>Created</th>
+                        <th>IsPinned</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -65,6 +66,8 @@
                                     </a>
                                 </td>
                                 <td>@m.Created?.ToShortTimeString()</td>
+                                <td>@((m.IsPinned == true) ? "공지" : "")</td>
+
                                 <td>
                                     <a href="/Notices/Details/@m.Id" class="btn btn-light">Details</a>
                                     <a href="/Notices/Edit/@m.Id" class="btn btn-light">Edit</a>
