--- a/ArticleAppBlazorServer/Pages/Notices/Manage.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Manage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/notices/manage"
+@page "/notices/manage/{ParentId:int}"
 
 <h3>Manage</h3>
 
@@ -12,7 +13,7 @@
             <NotAuthorized>
                 <a href="/Notices/Index" class="btn btn-primary">List</a>
                 <input type="button" name="btnCreate" value="Create(Modal)" class="btn btn-primary"
-                      @onclick="ShowEditorForm" />
+                @onclick="ShowEditorForm" />
                 <a href="/Notices/Report" class="btn btn-primary">Report</a>
             </NotAuthorized>
         </AuthorizeView>
@@ -41,6 +42,7 @@
                         <th>Id</th>
                         <th>Name</th>
                         <th>Created</th>
+                        <th>IsPinned</th>
                         <th>Action</th>
                         <th>Admin</th>
                     </tr>
@@ -68,6 +70,7 @@
                                     </a>
                                 </td>
                                 <td>@m.Created?.ToShortTimeString()</td>
+                                <td>@((m.IsPinned==true) ? "공지":"")</td>
                                 <td>
                                     <a href="/Notices/Details/@m.Id" class="btn btn-light">Details</a>
                                     <a href="/Notices/Edit/@m.Id" class="btn btn-light">Edit</a>
@@ -75,9 +78,11 @@
                                 </td>
                                 <td>
                                     <input type="button" name="btnEdit" value="Edit(Modal)" class="btn btn-primary"
-                                           @onclick="(()=>EditBy(m))" />
+                                    @onclick="(()=>EditBy(m))" />
                                     <input type="button" name="btnDelete" value="Delete(Modal)" class="btn btn-primary"
-                                           @onclick="(()=>DeleteBy(m))" />
+                                    @onclick="(()=>DeleteBy(m))" />
+                                    <input type="button" name="btnToggle" value="Toggle with Modal" class="btn btn-primary" 
+                                    @onclick="(() => ToggleBy(m))" />
                                 </td>
                             </tr>
                         }
@@ -96,14 +101,35 @@
 </div>
 
 <ArticleAppBlazorServer.Pages.Notices.Components.EditorForm Model="model" @ref="EditFormReference"
-    CreateCallback="CreatOrEdit"
-    EditCallback="CreatOrEdit"
+CreateCallback="CreatOrEdit"
+EditCallback="CreatOrEdit"
 >
     <EditorFormTitle>@EditorFormTitle</EditorFormTitle>
 </ArticleAppBlazorServer.Pages.Notices.Components.EditorForm>
 <ArticleAppBlazorServer.Pages.Notices.Components.DeleteDialog
-    @ref="DeleteDialogReference"
-    OnClick="DeleteClick">
+@ref="DeleteDialogReference"
+OnClick="DeleteClick">
 </ArticleAppBlazorServer.Pages.Notices.Components.DeleteDialog>
 
-
+@if (IsInlineDialogShow)
+{
+    <div class="modal fade show d-block" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">공지글로 올리기</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="ToggleClose">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>@(model.Id)번 글을 공지글로 설정할까요?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" @onclick="ToggleClick">설정</button>
+                    <button type="button" class="btn btn-secondary" @onclick="ToggleClose">닫기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
