--- a/ArticleAppBlazorServer/Pages/Notices/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Index.razor
@@ -86,7 +86,11 @@
         <BmsPager.BmsPagerComponent Model="pager" PageIndexChanged="PageIndexChangedA"></BmsPager.BmsPagerComponent>
     </div>
     <div class="col-md-12">
-
+        <ArticleAppBlazorServer.Pages.Notices.Components.SearchBox
+            SearchQueryChanged="Search"
+            placeholder="Search Notices..."
+        >
+        </ArticleAppBlazorServer.Pages.Notices.Components.SearchBox>
     </div>
 </div>
 
