Notices Report Bar Chart로 1년동안의 글 작성 개수 출력

--- a/ArticleAppBlazorServer/Pages/Notices/Manage.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Manage.razor
@@ -97,6 +97,9 @@
         <BmsPager.BmsPagerComponent Model="pager" PageIndexChanged="PageIndexChangedA"></BmsPager.BmsPagerComponent>
     </div>
     <div class="col-md-12">
+        <ArticleAppBlazorServer.Pages.Notices.Components.SearchBox SearchQueryChanged="Search"
+                                                                   placeholder="Search Notices...">
+        </ArticleAppBlazorServer.Pages.Notices.Components.SearchBox>
     </div>
 </div>
 
