--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -30,8 +30,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Amaranth10/">
-                <span class="oi oi-audio" aria-hidden="true"></span> * Amaranth10
+            <NavLink class="nav-link" href="/notices/Report/">
+                <span class="oi oi-audio" aria-hidden="true"></span> * Report
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -40,6 +40,9 @@
             </NavLink>
         </div>
     </nav>
+    <div>
+        <img src="https://www.stmmall.co.kr/product_images/d_images/XG770008_d1.JPG" width="100%"/>
+    </div>
 </div>
 
 @code {
