--- a/ArticleAppBlazorServer/Pages/Notices/Report.razor
+++ b/ArticleAppBlazorServer/Pages/Notices/Report.razor
@@ -2,6 +2,13 @@
 
 <h3>Report</h3>
 
-@code {
 
-}
+<div class="card">
+    <div class="card-body">
+        <ChartJs.Blazor.Charts.ChartJsBarChart 
+            @ref="_barChart"
+            Config="@_barChartConfig"
+            Width="600" Height="300">
+        </ChartJs.Blazor.Charts.ChartJsBarChart>
+    </div>
+</div>
