--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -12,6 +12,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="ArticleAppBlazorServer.styles.css" rel="stylesheet" />    
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+
+    <!-- Some styling -->
+    <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJSBlazor.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -32,6 +35,15 @@
     <script src="~/lib/jquery.js"></script>
     <script src="~/lib/dist/js/bootstrap.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <!-- Reference the included moment.js javascript file. -->
+    <script src="_content/ChartJs.Blazor/moment-with-locales.min.js" type="text/javascript" language="javascript"></script>
+
+    <!-- Reference the included ChartJs javascript file. -->
+    <script src="_content/ChartJs.Blazor/Chart.min.js" type="text/javascript" language="javascript"></script>
+
+    <!-- This is the glue between the C# code and the ChartJs charts -->
+    <script src="_content/ChartJs.Blazor/ChartJsBlazorInterop.js" type="text/javascript" language="javascript"></script>
+
     <script>
         // 넘어온 ID를 갖는 모달 창 닫기
         function closeModal(modalId) {
