--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -31,7 +31,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/notices/Report/">
-                <span class="oi oi-audio" aria-hidden="true"></span> * Report
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> * Report
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Uploads/">
+                <span class="oi oi-cloud-upload" aria-hidden="true"></span> * Upload
             </NavLink>
         </div>
         <div class="nav-item px-3">
