public IFileStorageManager FileStorageManager  로 수정

--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -44,6 +44,8 @@
     <!-- This is the glue between the C# code and the ChartJs charts -->
     <script src="_content/ChartJs.Blazor/ChartJsBlazorInterop.js" type="text/javascript" language="javascript"></script>
 
+    <script src="_content/BlazorInputFile/inputfile.js"></script>
+
     <script>
         // 넘어온 ID를 갖는 모달 창 닫기
         function closeModal(modalId) {
