--- a/ArticleAppBlazorServer/Pages/Uploads/Components/EditorForm.razor
+++ b/ArticleAppBlazorServer/Pages/Uploads/Components/EditorForm.razor
@@ -51,6 +51,11 @@
                             </InputSelect>
                             <ValidationMessage For="@(() => parentId)" class="form-text text-muted"></ValidationMessage>
                         </div>
+                        <div class="form-group m-1">
+                            <label for="txtTitle">File</label>
+                            <BlazorInputFile.InputFile OnChange="HandleSelection">
+                            </BlazorInputFile.InputFile>
+                        </div>
                         <div class="form-group m-2">
                             <button type="submit" class="btn btn-primary">Submit</button>
                             <button type="button" class="btn btn-secondary" @onclick="Hide">Cancel</button>
