--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -46,6 +46,8 @@
 
     <script src="_content/BlazorInputFile/inputfile.js"></script>
 
+    <script src="_content/BlazorUtils/saveAsFile.js"></script>
+
     <script>
         // 넘어온 ID를 갖는 모달 창 닫기
         function closeModal(modalId) {
