ParentKey열 추가, GUID에 해당하는 데이터만 리스트 푯

--- a/ArticleAppBlazorServer/Pages/Uploads/Details.razor
+++ b/ArticleAppBlazorServer/Pages/Uploads/Details.razor
@@ -28,6 +28,14 @@
                 @((MarkupString)content)
             </div>
         </div>
+        <div class="form-group row">
+            <div class="col-sm-12">
+                @if (model.FileName != null)
+                {
+                    <img src="@(folderPath + "/" + model.FileName)" alt="Image" class="img-fluid" />                    
+                }
+            </div>
+        </div>
         <div class="form-group">
             <a href="/uploads/Edit/@model.Id" class="btn btn-primary">Edit</a>
             <a href="/uploads/Delete/@model.Id" class="btn btn-danger">Delete</a>
