--- a/ArticleAppBlazorServer/Pages/Uploads/Create.razor
+++ b/ArticleAppBlazorServer/Pages/Uploads/Create.razor
@@ -37,6 +37,11 @@
                 <ValidationMessage For="@(() => ParentId)" class="form-text text-muted"></ValidationMessage>
             </div>
             <div class="form-group">
+                <label for="txtTitle">File</label>
+                <BlazorInputFile.InputFile OnChange="HandleSelection">
+                </BlazorInputFile.InputFile>
+            </div>
+            <div class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <a href="/uploads" class="btn btn-secondary">List</a>
             </div>
